# uiautodev-download

./: .env.example  .gitignore  Claude.md  Makefile  README.md  main.py  pyproject.toml
app/core/: config.py
app/schemas/: version.py
app/services/: r2.py
backend/: .env.example  CONVENTIONS.md  main.py  pyproject.toml
backend/app/: config.py
backend/app/api/: deps.py
backend/app/core/: config.py
backend/app/routers/: __init__.py  spa.py  versions.py
backend/app/routers/api/: __init__.py  cache.py  versions.py
backend/app/services/: r2.py
backend/tests/: conftest.py  test_api.py
frontend/: .mcp.json  Claude.md  PROJECT.md  README.md  package.json  vite.config.ts
frontend/src/lib/: api.ts
frontend/src/lib/components/: FileList.svelte
frontend/src/lib/components/ui/button/: button.svelte
frontend/src/routes/: +page.svelte
frontend/src/routes/[version]/: +page.svelte
frontend/src/routes/history/: +page.svelte
tests/: conftest.py  test_spa_serving.py
