[project]
name = "uiautodev-download"
version = "0.1.0"
description = "Add your description here"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.34.0",
    "boto3>=1.35.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "moto[all,ec2,s3]>=5.1.21",
    "cashews>=7.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.26.0",
    "httpx>=0.28.0",
    "moto>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
